Fixed properties drawer issues on small screens

--- a/src/style/_footer.sass
+++ b/src/style/_footer.sass
@@ -27,6 +27,10 @@ footer
     max-width: min(80vw, 669px)
     min-width: min(80vw, 669px)
     padding: 0 1em
+    @media screen and (max-width: 1200px)
+      max-width: unset
+      min-width: unset
+
 
   #footerRight
     align-items: flex-end
